# self-driving-car-ros2

./: Dockerfile  README.md  SETUP.md  docker-compose.yml  requirements.txt
ros2-packages/autonomous_controller/: package.xml
ros2-packages/autonomous_controller/autonomous_controller/: autonomous_controller.py
ros2-packages/autonomous_perception/: README.md  package.xml  setup.cfg  setup.py
ros2-packages/autonomous_perception/autonomous_perception/: __init__.py  bev_fusion_node.py  profiling.py  utils.py
ros2-packages/autonomous_perception/autonomous_perception/engines/: __init__.py  base.py  mock.py
ros2-packages/autonomous_perception/autonomous_perception/scripts/: nuscenes_to_mcap.py  profile_runner.py
ros2-packages/autonomous_perception/config/: bevfusion.yaml  calibration_placeholder.yaml
ros2-packages/autonomous_perception/launch/: autonomous_perception_launch.py
scripts/: dev.sh  setup_python_env.sh
