<?xml version="1.0"?>
<package format="3">
  <name>autonomous_perception</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper for pretrained BEV fusion, occupancy, and detection networks.</description>
  <maintainer email="autonomy@example.com">Darshan AI Lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
